[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/pause_menu/PauseScene.gd" type="Script" id=1]
[ext_resource path="res://ui/start_menu/Blur.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/fonts/extra_large_menu_text.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/fonts/large_menu_text.tres" type="DynamicFont" id=4]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Blur" parent="." instance=ExtResource( 2 )]

[node name="PausedLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -480.0
custom_fonts/font = ExtResource( 3 )
text = "Paused"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 1024.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 4 )
text = "Resume"
flat = true

[node name="Separator000" type="HSeparator" parent="VBoxContainer"]
visible = false
margin_top = 203.0
margin_right = 1024.0
margin_bottom = 207.0

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_top = 211.0
margin_right = 1024.0
margin_bottom = 268.0
custom_fonts/font = ExtResource( 4 )
text = "Menu"
flat = true

[node name="Separator001" type="HSeparator" parent="VBoxContainer"]
visible = false
margin_top = 268.0
margin_right = 1024.0
margin_bottom = 272.0

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 272.0
margin_right = 1024.0
margin_bottom = 329.0
custom_fonts/font = ExtResource( 4 )
text = "Quit"
flat = true
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
